--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,13 @@ Date: 2012-07-09
 Author: Barry Rowlingson <b.rowlingson@gmail.com>
 Maintainer: Barry Rowlingson <b.rowlingson@gmail.com>
 Description: Some space-time event modelling functions.
+Depends:
+    plyr
 License: MIT
 Collate:
     'logLinear.R'
     'params.R'
     'powerSum.R'
     'SIR2.R'
+    'distanceDecay.R'
+    'infectivity.R'
